tests/neg-macros/annot-result-owner/Test_2.scala
@insertVal // error
def foo(): Unit = ()

def bar =
  @insertVal // error
  def foo(): Unit = ()
